[package]
edition = "2021"
name    = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum               = { version = "0.4", features = ["ws"] }
futures            = "0.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
tokio              = { version = "1", features = ["full"] }
tower              = { version = "0.4", features = ["util"] }
tower-http         = { version = "0.2", features = ["fs"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
